# nmisp

./: .gitignore  .replit  .travis.yml  00.bash.ipynb  00.ipynb  000_Systems_of_Linear_Equations.ipynb  005_Eigenvalues_of_a_Matrix.ipynb  00_Systems_of_Linear_Equations.ipynb  00_interpolation.ipynb  00_introduction.ipynb  00_linear_algebra_in_python.ipynb  01.ipynb  015_System_Linear_Eq.ipynb  01_first_order.ipynb  02.ipynb  020_System_Linear_Eq.ipynb  02_bisection.ipynb  02_second_order.ipynb  05.jupyter_notebook.ipynb  05_probability.ipynb  10.git.ipynb  100_Principal_Stress_Components_2D.ipynb  10_Forward_Euler.ipynb  10_floating_point.ipynb  10_sequential.ipynb  10_statistics.ipynb  10_vector_addition_subtraction.ipynb  15.git_cheat_sheet.md  15_Forward_Euler_Higher_Order.ipynb  20.ms_vs_code.md  20_Modified_Euler.ipynb  20_vector_dot_cross_product.ipynb  30_Runge_Kutta.ipynb  35_Runge_Kutta_Higher_Order.ipynb  45_Example_Cantilever.ipynb  LICENSE  README.md  ReadMe.md  before_install_nix_win_cache.sh  build_util.py  (+32 more)
.github/: dependabot.yml
00_introduction/: 00_introduction.ipynb  10_floating_point.ipynb  20_python_review.ipynb  30_python_review_2.ipynb  35_numpy_matplotlib.ipynb  40_how_to_draw_a_circle.ipynb  50_pandas.ipynb  LICENSE  digit_table.py  eca_hw_01.py
00_motivation/: 00_Motivation.ipynb
01_05_interpolation/: 00_interpolation.ipynb
01_root_finding/: 01_sequential.ipynb  02_bisection.ipynb  03_newton_raphson.ipynb
02_num_int/: 00_zeroth_order.ipynb  01_first_order.ipynb  02_second_order.ipynb  10_T_section_centroid.ipynb  (+1 more)
30_num_int/: num_int.py  (+13 more)
(+246 files in other folders)
